--- a/Server/package.json
+++ b/Server/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.540.0",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
