--- a/Server/package.json
+++ b/Server/package.json
@@ -22,6 +22,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
     "@types/mime": "^3.0.4",
+    "@types/mime-types": "^2.1.4",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -38,7 +39,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.540.0",
     "@aws-sdk/client-ses": "^3.540.0",
+    "@aws-sdk/lib-storage": "^3.540.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
