--- a/Server/package.json
+++ b/Server/package.json
@@ -25,6 +25,8 @@
     "@types/mime-types": "^2.1.4",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.11.17",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
@@ -54,7 +56,10 @@
     "minimist": "^1.2.8",
     "mongodb": "^6.5.0",
     "sharp": "^0.33.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "yaml": "^2.4.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8",
