--- a/Server/package.json
+++ b/Server/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon",
-    "dev:stag": "npx nodemon --env=staging",
-    "dev:prod": "npx nodemon --env=production",
+    "dev": "NODE_ENV=development npx nodemon",
+    "dev:stag": "NODE_ENV=staging npx nodemon",
+    "dev:prod": "NODE_ENV=production npx nodemon",
     "build": "rimraf ./dist && tsc && tsc-alias",
-    "start:dev": "node dist/index.js --env=development",
-    "start:stag": "node dist/index.js --env=staging",
-    "start:prod": "node dist/index.js --env=production",
+    "start:dev": "NODE_ENV=development node dist/index.js",
+    "start:stag": "NODE_ENV=staging node dist/index.js",
+    "start:prod": "NODE_ENV=production node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
@@ -65,6 +65,7 @@
     "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
     "yaml": "^2.4.1"
   },
   "optionalDependencies": {
