--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,3 +19,7 @@ jobs:
         run: echo "${{ secrets.TOEICTESTING247_ENV_PRODUCTION }}" > .env.production
       - name: Build the Docker image
         run: docker build --progress=plain -t nguyenminhquang01/toeictesting247:v1 .
+      - name: Log in to Docker Hub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Push the Docker image
+        run: docker push nguyenminhquang01/toeictesting247:v1
