--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,5 +38,6 @@ jobs:
           script: |
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
             docker pull nguyenminhquang01/toeictesting247:v1
+            docker stop toeictesting247
             docker rm toeictesting247
             docker run -dp 3000:3000 --name toeictesting247 nguyenminhquang01/toeictesting247:v1
