--- a/Server/openapi/components.yaml
+++ b/Server/openapi/components.yaml
@@ -450,6 +450,172 @@ components:
           description: Thời gian làm bài
           example: 133456
 
+    TestRequestBody_v2:
+      type: object
+      required:
+        - title
+        - description
+        - timeline
+      properties:
+        title:
+          type: string
+          example: 'TEST 1'
+        description:
+          type: string
+          example: 'Part 1: Photos'
+        timeline:
+          type: integer
+          description: Thời gian làm bài
+          example: 120
+
+    TestResponseBody_v2:
+      type: object
+      properties:
+        _id:
+          type: string
+          example: '6655f6fb91219247ab3fab70'
+        title:
+          type: string
+          example: 'Test 4'
+        description:
+          type: string
+          example: 'Part 1: Photos'
+        timeline:
+          type: integer
+          example: 120
+        questions:
+          type: array
+          example: []
+          items:
+            type: object
+        created_at:
+          type: string
+          format: date-time
+          example: '2024-05-28T15:23:39.603Z'
+        updated_at:
+          type: string
+          format: date-time
+          example: '2024-05-28T15:23:39.603Z'
+
+    FullTestDetailResponseBody_v2:
+      type: object
+      properties:
+        _id:
+          type: string
+          example: '6655716d0bed7738534ca70d'
+        title:
+          type: string
+          example: 'Test 2'
+        description:
+          type: string
+          example: 'Part 1: Photos'
+        timeline:
+          type: integer
+          example: 120
+        questions:
+          type: array
+          items:
+            type: object
+            properties:
+              num_part:
+                type: integer
+                example: 1
+              items:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                      example: '665573350bed7738534ca712'
+                    type:
+                      $ref: '#/components/schemas/QuestionType'
+                    type_content:
+                      $ref: '#/components/schemas/QuestionTypeContent'
+                    num_part:
+                      type: integer
+                      example: 1
+                    description:
+                      type: string
+                      example: "cooperative: sẵn lòng giúp đỡ hoặc làm những gì người khác yêu cầu visible: có thể nhìn thấy essential: cần thiết hoặc cần thiết alternative: (của một hoặc nhiều thứ) có sẵn như một khả năng khác => 'essential' có nghĩa hợp lý nhất"
+                    content:
+                      type: string
+                      example: 'Having proper ventilation throughout the building is _____ for protecting the health and well-being of the workers.'
+                    audio_content:
+                      type: string
+                      nullable: true
+                      example: null
+                    image_content:
+                      type: string
+                      nullable: true
+                      example: null
+                    answers:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          order_answer:
+                            type: string
+                            example: 'A'
+                          content_answer:
+                            type: string
+                            example: 'cooperative'
+                    correct_at:
+                      type: object
+                      properties:
+                        order_answer:
+                          type: string
+                          example: 'C'
+                        content_answer:
+                          type: string
+                          example: 'essential'
+                      nullable: true
+                      example: null
+                    selected_at:
+                      type: object
+                      nullable: true
+                      example: null
+                    score:
+                      type: integer
+                      example: 1
+                    parent_id:
+                      type: string
+                      nullable: true
+                      example: null
+                    created_at:
+                      type: string
+                      format: date-time
+                      example: '2024-05-28T06:01:25.308Z'
+                    updated_at:
+                      type: string
+                      format: date-time
+                      example: '2024-05-28T06:01:25.308Z'
+                    child_questions:
+                      type: array
+                      example: []
+                      items:
+                        type: object
+
+    UpdateTestRequestBody_v2:
+      type: object
+      required:
+        - test_id
+      properties:
+        test_id:
+          type: string
+          description: id của của bài kiểm tra
+          example: '660b4cab4673a97618935954'
+        title:
+          type: string
+          example: 'BÀI TẬP 11'
+        description:
+          type: string
+          example: '(Các bạn xem đáp án và giải thích chi tiết cuối sách nhé)'
+        timeline:
+          type: integer
+          description: Thời gian làm bài
+          example: 133456
+
     Answer:
       type: object
       properties:
@@ -582,6 +748,11 @@ components:
     QuestionType:
       type: number
       enum: [SimpleQuestion, QuoteQuestion, DoubleQuestion, TripleQuestion, QuadrupleQuestion, QuintupleQuestion]
+      example: 0
+
+    QuestionTypeContent:
+      type: number
+      enum: [Listening, Reading]
       example: 0
 
     QuestionRequestBody_V2:
